--- a/src/styles/Abouts.css
+++ b/src/styles/Abouts.css
@@ -1,7 +1,97 @@
+@media (max-width: 320px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 60px 40px 0px 30px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+}
+
+    .footer-about {
+        background-color: #dce0e6;
+        height: 186px;
+}
+}
+@media (min-width: 321px) and (max-width: 375px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 60px 35px 0px 60px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+}
+
+    .footer-about {
+        background-color: #dce0e6;
+        height: 186px;
+}
+}
+@media (min-width: 376px) and (max-width: 425px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 60px 40px 0px 70px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+}
+
+    .footer-about {
+        background-color: #dce0e6;
+        height: 186px;
+}
+}
+@media(min-width:426px) and (max-width:768px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 60px 95px 0px 105px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+    }
+    
+    .footer-about {
+        background-color: #dce0e6;
+        height: 179px;
+    }
+}
+@media(min-width:769px) and (max-width:1024px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 30px 120px 0px 170px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+    }
+    
+    .footer-about {
+        background-color: #dce0e6;
+        height: 134px;
+    }
+}
+@media(min-width:1025px) and (max-width:1440px) {
+    button {
+        border-radius: 10px;
+        padding: 10px;
+        margin: 15px 200px 0px 220px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+    }
+    
+    .footer-about {
+        background-color: #dce0e6;
+        height: 80px;
+    }
+}
 button {
     border-radius: 10px;
     padding: 15px;
-    margin: 150px 30px 0px 0px;
+    margin: 150px 40px 0px 50px;
     background-color: black;
     color: white;
     font-size: 20px;
