--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -3,41 +3,42 @@
     margin: 0;
     padding: 0;
 }
+@media (max-width: 768px) {
 
 .titulo {
-    font-size: 30px;
+    font-size: 15px;
     text-align: center;
-    margin: 0px;
-    padding: 30px;
+    margin: 10px;
+    padding: 10px;
 }
 
 .form-box{
-    min-width: 50%;
+    min-width: 100%;
     height: 10vh;
     border: 1px solid;
     margin-bottom: 10px;
     position:relative;
     background-color: #567ebb;
-    font-size: 17px;
+    font-size: 12px;
 }
 
 .form-box form{
     background-color: #dce0e6;
-    padding: 20px;
+    padding: 10px;
 }
 
 .form-box label {
-    margin: 10px;
+    margin: 5px;
 }
 
 .form-box input, textarea{
     display: block;
-    width: 94.5vw;
+    width: 91.5vw;
     padding: .8rem .8rem .5rem .8rem;
     margin: .9vw 0.9vw;
     border: 2px solid black;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 12px;
     color: black;
 }
 
@@ -48,13 +49,185 @@
 .button {
     border-radius: 10px;
     padding: 15px;
-    margin: 65px;
+    margin: 50px;
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .footer {
     background-color: #dce0e6;
-    height: 265px
+    height: 189px
 }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+
+    .titulo {
+        font-size: 20px;
+        text-align: center;
+        margin: 5px;
+        padding: 10px;
+    }
+    
+    .form-box{
+        min-width: 100%;
+        height: 10vh;
+        border: 1px solid;
+        margin-bottom: 10px;
+        position:relative;
+        background-color: #567ebb;
+        font-size: 15px;
+    }
+    
+    .form-box form{
+        background-color: #dce0e6;
+        padding: 10px;
+    }
+    
+    .form-box label {
+        margin: 5px;
+    }
+    
+    .form-box input, textarea{
+        display: block;
+        width: 95.5vw;
+        padding: .8rem .8rem .5rem .8rem;
+        margin: .9vw 0.9vw;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-size: 15px;
+        color: black;
+    }
+    
+    .form-box textarea{
+        height: 15vh;
+    }
+    
+    .button {
+        border-radius: 10px;
+        padding: 15px;
+        margin: 2px;
+        background-color: black;
+        color: white;
+        font-size: 15px;
+    }
+    
+    .footer {
+        background-color: #dce0e6;
+        height: 68px
+    }
+    }
+@media (min-width: 1025px) and (max-width: 1440px) {
+
+        .titulo {
+            font-size: 20px;
+            text-align: center;
+            margin: 3px;
+            padding: 3px;
+        }
+        
+        .form-box{
+            min-width: 100%;
+            height: 10vh;
+            border: 1px solid;
+            margin-bottom: 5px;
+            position:relative;
+            background-color: #567ebb;
+            font-size: 12px;
+        }
+        
+        .form-box form{
+            background-color: #dce0e6;
+            padding: 10px;
+        }
+        
+        .form-box label {
+            margin: 5px;
+        }
+        
+        .form-box input, textarea{
+            display: block;
+            width: 95.5vw;
+            padding: .8rem .8rem .5rem .8rem;
+            margin: .9vw 0.9vw;
+            border: 2px solid black;
+            border-radius: 10px;
+            font-size: 15px;
+            color: black;
+        }
+        
+        .form-box textarea{
+            height: 15vh;
+        }
+        
+        .button {
+            border-radius: 10px;
+            padding: 15px;
+            margin: 1px;
+            background-color: black;
+            color: white;
+            font-size: 12px;
+        }
+        
+        .footer {
+            background-color: #dce0e6;
+            height: 57px
+        }
+        }
+@media (min-width: 1441px) and (max-width: 2560px) {
+
+            .titulo {
+                font-size: 35px;
+                text-align: center;
+                margin: 3px;
+                padding: 3px;
+            }
+            
+            .form-box{
+                min-width: 100%;
+                height: 10vh;
+                border: 1px solid;
+                margin-bottom: 5px;
+                position:relative;
+                background-color: #567ebb;
+                font-size: 25px;
+            }
+            
+            .form-box form{
+                background-color: #dce0e6;
+                padding: 10px;
+            }
+            
+            .form-box label {
+                margin: 5px;
+            }
+            
+            .form-box input, textarea{
+                display: block;
+                width: 95.5vw;
+                padding: .8rem .8rem .5rem .8rem;
+                margin: .9vw 0.9vw;
+                border: 2px solid black;
+                border-radius: 10px;
+                font-size: 25px;
+                color: black;
+            }
+            
+            .form-box textarea{
+                height: 15vh;
+            }
+            
+            .button {
+                border-radius: 10px;
+                padding: 15px;
+                margin: 1px;
+                background-color: black;
+                color: white;
+                font-size: 20px;
+            }
+            
+            .footer {
+                background-color: #dce0e6;
+                height: 265px
+            }
+            }
