--- a/src/styles/Simulators.css
+++ b/src/styles/Simulators.css
@@ -1,42 +1,50 @@
-/* h1 {
-    font-size: 35px;
-    padding: 5px 2px;
-    color: white ;
-}
 
-p {
-    font-size: 17px;
-    padding: 10px;
-    font-weight: bold;
-} */
-
-@media (max-width: 1440px) {
+@media (max-width: 320px) {
 
     h1 {
-        font-size: 35px;
+        font-size: 20px;
         padding: 5px 2px;
-        color: white;
+        color: #2d572c;
     }
 
     p {
-        font-size: 17px;
+        font-size: 12px;
         padding: 10px;
         font-weight: bold;
+        text-align: center ;
     }
 
 
 }
 
-@media (min-width: 1441px) and (max-width: 2560px) {
+@media (min-width: 321px) and (max-width: 768px) {
 
     h1 {
-        font-size: 70px;
+        font-size: 20px;
         padding: 5px 2px;
-        color: white;
+        color: #2d572c;
     }
 
     p {
-        font-size: 35px;
+        font-size: 15px;
+        padding: 10px;
+        font-weight: bold;
+        text-align: center ;
+    }
+
+
+}
+
+@media (min-width: 769px) {
+
+    h1 {
+        font-size: 30px;
+        padding: 0px 2px;
+        color: #2d572c;
+    }
+
+    p {
+        font-size: 20px;
         padding: 10px;
         font-weight: bold;
     }
